# ProgrammingPrinciplesandPractice

./: .gitignore  CMakeLists.txt  ProgrammingPrinciplesandPractice.sln
Chapter2/: Chapter2.vcxproj  Chapter2.vcxproj.filters  hello_world.cpp
Part1/Chapter2/: CMakeLists.txt  hello_world  hello_world.cpp
Part1/Chapter3/: CMakeLists.txt  compare_names.cpp  exercise_operators.cpp  first_name.cpp  name_and_age.cpp  repeated_names.cpp  two_names.cpp  unsafe_conversions.cpp
