cmake_minimum_required(VERSION 3.30)
project(Chapter3)

add_executable(first_name.out first_name.cpp)
add_executable(name_and_age.out name_and_age.cpp)
add_executable(exercise_operators.out exercise_operators.cpp)
add_executable(two_names.out two_names.cpp)
add_executable(compare_names.out compare_names.cpp)
add_executable(repeated_names.out repeated_names.cpp)